--- a/index.html
+++ b/index.html
@@ -11,12 +11,32 @@
     <header class="page__header">
         <a href="./" class="page__logo"><span>DJI</span></a>
         <div class="page__intro">
-            
+            <h1>Dron DJI MiniPro</h1>
+            <p>Pořizujte dechberoucí letecké záběry s dosud nejpokročilejším dronem DJI s minikamerou &mdash; Mini 4 Pro. Díky výkonným zobrazovacím funkcím, všesměrovému snímání překážek, funkcí&nbsp;ActiveTrack 360°&nbsp;s novým režimem Trace a podporou přenosu v&nbsp;rozlišení FullHD&nbsp;na vzdálenost&nbsp;až 20 km, dokáže oslovit nejen začátečníky, ale i náročnější uživatele kvadrokoptér.</p>
+            <a href="#">prohlédnout funkce</a>
         </div>
     </header>
-    <section class="page__content">
-
-    </section>
+    <main class="page__content">
+        <section class="page__content">
+            <h2 class="page__title">Popis a parametry dronu</h2>
+            <figure>
+                <picture>
+                    <source srcset="./images/dron-v-letu.avif" type="image/avif">
+                    <source srcset="./images/dron-v-letu.webp" type="image/webp">
+                    <img class="img-responsive" src="./images/dron-v-letu.jpg" alt="Dron DJI Mini 4 Pro v letu">
+                </picture>
+                <figcaption>
+                    Pohled zpředu drona DJI Mini 4 Pro
+                </figcaption>
+            </figure>
+        </section>
+        <section class="page__content">
+            <h2 class="page__title">Dostupná provedení</h2>
+        </section>
+        <section class="page__content">
+            <h2 class="page__title">Galerie</h2>
+        </section>
+    </main>
     <footer class="page__footer">
        
     </footer>
