pridan text provedeni

--- a/index.html
+++ b/index.html
@@ -44,13 +44,38 @@
         </section>
         <section class="page__content">
             <h2 class="page__title">Dostupná provedení</h2>
+            <figure>
+                <picture>
+                    <source srcset="./images/dron-DJI-Mini-4-Pro-RC-N2.webp" type="image/webp">
+                    <img class="img-responsive" src="./images/dron-DJI-Mini-4-Pro-RC-N2.jpg" alt="Balíček dronu DJI Mini 4 Pro RC N2">
+                </picture>
+                <figcaption>
+                    <h3>Dron DJI Mini 4 Pro + RC-N2 </h3>
+                    <p>V&nbsp;tomto balíčku získáte dron DJI Mini 4&nbsp;Pro se základním ovladačem DJI&nbsp;RC-NC. </p>
+                    <a href="https://dronpro.cz/dron-dji-mini-4-pro">zakoupit nyní</a>
+                </figcaption>
+            </figure>
+            <figure>
+                <picture>
+                    <source srcset="./images/dron-v-letu.webp" type="image/webp">
+                    <img class="img-responsive" src="./images/dron-DJI-Mini-4-Pro-Fly-More-Combo-DJI-RC-2.jpg" alt="Balíček dronu DJI Mini 4 Pro RC 2">
+                </picture>
+                <figcaption>
+                    <h3>Dron DJI Mini 4 Pro Fly More Combo + DJI RC 2</h3>
+                    <p>Dron DJI Mini 4&nbsp;Pro s&nbsp;ovladačem s&nbsp;vestavěným dispejem DJI RC 2&nbsp;a dalším praktickým příslušenstvím. </p>
+                    <a href="https://dronpro.cz/dron-dji-mini-4-pro-fly-more-combo-dji-rc-2-1">zakoupit nyní</a>
+                </figcaption>
+            </figure>
+            <p>Mini to the Max</p>
+            <p>Nakupte nyní ve verzi Fly More Combo s 10% slevou za jedinečnou cenu 28 990 Kč.</p>
+            <a href="https://dronpro.cz/dron-dji-mini-4-pro-fly-more-combo-dji-rc-2-1">zakoupit se slevou</a>
         </section>
         <section class="page__content">
             <h2 class="page__title">Galerie</h2>
         </section>
     </main>
     <footer class="page__footer">
-       
+       <a href="www.dji.com">www.dji.com</a>
     </footer>
 </body>
 </html>
