--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             </figure>
             <figure>
                 <picture>
-                    <source srcset="./images/dron-v-letu.webp" type="image/webp">
+                    <source srcset="./images/dron-DJI-Mini-4-Pro-Fly-More-Combo-DJI-RC-2.webp" type="image/webp">
                     <img class="img-responsive" src="./images/dron-DJI-Mini-4-Pro-Fly-More-Combo-DJI-RC-2.jpg" alt="Balíček dronu DJI Mini 4 Pro RC 2">
                 </picture>
                 <figcaption>
