--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
     <main class="page__content">
         <section class="page__content">
             <h2 class="page__title">Popis a parametry dronu</h2>
-            <p>Mini 4 Pro stejně jako jeho předchůdci&nbsp;váží méně než 249 g&nbsp;pro pohodlné používání na cestách a mírnější legislativní nároky na piloty a provozovatele v různých regionech. </p>
-            <p>Kamera Mini 4 Pro se chlubí 1/1,3palcovým snímačem CMOS s funkcí Dual Native ISO Fusion, clonou f/1,7 a 2,4μm pixely 4 v 1, takže snadno zachytíte i složitější detaily. Díky&nbsp;HDR videu v 4K/60 fps kvalitě&nbsp;a&nbsp;zpomalenému videu při 4K/100 fps&nbsp;můžete zachytit detailní záběry, zatímco se&nbsp;10-bit D-Log M&nbsp;postará o ohromující škálu 1,07 bilionu barev a&nbsp;HLG&nbsp;zase o větší flexibilitu při editaci a sdílení. HLG díky vysokému dynamickému rozsahu zaručuje, že barvy a jas zůstanou přirozené a realistické bez nutnosti úprav nebo konverze formátu. </p>
+            <p>Mini 4 Pro stejně jako jeho předchůdci&nbsp;<strong>váží méně než 249 g</strong>&nbsp;pro pohodlné používání na cestách a <strong>mírnější legislativní nároky</strong> na piloty a provozovatele v různých regionech. </p>
+            <p>Kamera Mini 4 Pro se chlubí <b>1/1,3palcovým snímačem CMOS</b> s funkcí Dual Native ISO Fusion, clonou f/1,7 a 2,4μm pixely 4 v 1, takže snadno zachytíte i složitější detaily. Díky&nbsp;<b>HDR videu v 4K/60 fps kvalitě</b>&nbsp;a&nbsp;zpomalenému videu při <b>4K/100 fps</b>&nbsp;můžete zachytit detailní záběry, zatímco se&nbsp;<b>10-bit D-Log M</b>&nbsp;postará o ohromující škálu 1,07 bilionu barev a&nbsp;HLG&nbsp;zase o větší flexibilitu při editaci a sdílení. HLG díky vysokému dynamickému rozsahu zaručuje, <b>že barvy a jas zůstanou přirozené</b> a realistické <b>bez nutnosti úprav</b> nebo konverze formátu. </p>
             <figure>
                 <picture>
                     <source srcset="./images/dron-v-letu.avif" type="image/avif">
@@ -32,14 +32,14 @@
                 </figcaption>
             </figure>
             <h3>Kvalitní noční záběry a RAW</h3>
-            <p>Vylepšený algoritmus redukce šumu nočních snímků u modelu Mini 4 Pro vám pomůže pořizovat jasnější a kvalitnější záběry, i za šera nebo v&nbsp;noci. Každý drobný detail navíc můžete zaznamenat díky 48MP RAW a nové generaci SmartPhoto, která kombinuje HDR zobrazování, rozpoznávání scén a mnoho dalších funkcí. </p>
+            <p>Vylepšený algoritmus redukce šumu nočních snímků u modelu Mini 4 Pro vám pomůže pořizovat <b>jasnější a kvalitnější záběry,</b> i <b>za šera nebo v&nbsp;noci.</b> Každý drobný detail navíc můžete zaznamenat díky <b>48MP RAW</b> a nové generaci SmartPhoto, která kombinuje <b>HDR zobrazování,</b> rozpoznávání scén a mnoho dalších funkcí. </p>
             <h3>Chytré režimy pořizování záběrů</h3>
-            <p>Mini 4 Pro nabízí 3 způsoby, jak můžete snadno pořídit snímky, které potřebujete:&nbsp;Spotlight,&nbsp;Point of Interest&nbsp;a novou revoluční funkci&nbsp;ActiveTrack 360°&nbsp;s vylepšenými možnostmi sledování objektu. K&nbsp;dispozici jsou vám jako obvykle také automatické chytré režimy. </p>
+            <p>Mini 4 Pro nabízí 3 způsoby, jak můžete snadno pořídit snímky, které potřebujete:&nbsp;<strong>Spotlight,&nbsp;Point of Interest</strong>&nbsp;a novou revoluční funkci&nbsp;<strong>ActiveTrack 360°</strong>&nbsp;s vylepšenými možnostmi sledování objektu. K&nbsp;dispozici jsou vám jako obvykle také <strong>automatické chytré režimy.</strong> </p>
             <ul>
-                <li>MasterShots&nbsp;nabízí dynamické šablony pro pohyby kamerou přizpůsobené pro portrétní snímky, záběry zblízka, nebo z velké vzdálenosti. </li>
-                <li>QuickShots&nbsp;nabízí režimy Dronie, Circle, Helix, Rocket, Boomerang a Asteroid. </li>
-                <li>Hyperlapse&nbsp;nabízí režimy&nbsp;Free, Waypoint, Circle&nbsp;a&nbsp;Course Lock&nbsp;s neomezenou dobou snímání a podporuje také vytváření kompozice během natáčení. </li>
-                <li>Panorama&nbsp;podporuje&nbsp;180°, Wide, Vertical&nbsp;a&nbsp;Sphere&nbsp;panoramatické snímky. </li>
+                <li><b>MasterShots</b>&nbsp;nabízí dynamické šablony pro pohyby kamerou přizpůsobené pro portrétní snímky, záběry zblízka, nebo z velké vzdálenosti. </li>
+                <li><b>QuickShots</b>&nbsp;nabízí režimy Dronie, Circle, Helix, Rocket, Boomerang a Asteroid. </li>
+                <li><b>Hyperlapse</b>&nbsp;nabízí režimy&nbsp;Free, Waypoint, Circle&nbsp;a&nbsp;Course Lock&nbsp;s neomezenou dobou snímání a podporuje také vytváření kompozice během natáčení. </li>
+                <li><b>Panorama</b>&nbsp;podporuje&nbsp;180°, Wide, Vertical&nbsp;a&nbsp;Sphere&nbsp;panoramatické snímky. </li>
             </ul>
         </section>
         <section class="page__content">
