--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div class="page__intro">
             <h1>Dron DJI MiniPro</h1>
             <p>Pořizujte dechberoucí letecké záběry s dosud nejpokročilejším dronem DJI s minikamerou &mdash; Mini 4 Pro. Díky výkonným zobrazovacím funkcím, všesměrovému snímání překážek, funkcí&nbsp;ActiveTrack 360°&nbsp;s novým režimem Trace a podporou přenosu v&nbsp;rozlišení FullHD&nbsp;na vzdálenost&nbsp;až 20 km, dokáže oslovit nejen začátečníky, ale i náročnější uživatele kvadrokoptér.</p>
-            <a href="#">prohlédnout funkce</a>
+            <a class="button button--secondary" href="#">prohlédnout funkce</a>
         </div>
     </header>
     <main class="page__content">
@@ -52,7 +52,7 @@
                 <figcaption>
                     <h3>Dron DJI Mini 4 Pro + RC-N2 </h3>
                     <p>V&nbsp;tomto balíčku získáte dron DJI Mini 4&nbsp;Pro se základním ovladačem DJI&nbsp;RC-NC. </p>
-                    <a href="https://dronpro.cz/dron-dji-mini-4-pro">zakoupit nyní</a>
+                    <a class="button button--primary" href="https://dronpro.cz/dron-dji-mini-4-pro">zakoupit nyní</a>
                 </figcaption>
             </figure>
             <figure>
@@ -63,19 +63,19 @@
                 <figcaption>
                     <h3>Dron DJI Mini 4 Pro Fly More Combo + DJI RC 2</h3>
                     <p>Dron DJI Mini 4&nbsp;Pro s&nbsp;ovladačem s&nbsp;vestavěným dispejem DJI RC 2&nbsp;a dalším praktickým příslušenstvím. </p>
-                    <a href="https://dronpro.cz/dron-dji-mini-4-pro-fly-more-combo-dji-rc-2-1">zakoupit nyní</a>
+                    <a class="button button--primary" href="https://dronpro.cz/dron-dji-mini-4-pro-fly-more-combo-dji-rc-2-1">zakoupit nyní</a>
                 </figcaption>
             </figure>
             <p>Mini to the Max</p>
             <p>Nakupte nyní ve verzi Fly More Combo s 10% slevou za jedinečnou cenu 28 990 Kč.</p>
-            <a href="https://dronpro.cz/dron-dji-mini-4-pro-fly-more-combo-dji-rc-2-1">zakoupit se slevou</a>
+            <a class="button" href="https://dronpro.cz/dron-dji-mini-4-pro-fly-more-combo-dji-rc-2-1">zakoupit se slevou</a>
         </section>
         <section class="page__content">
             <h2 class="page__title">Galerie</h2>
         </section>
     </main>
     <footer class="page__footer">
-       <a href="www.dji.com">www.dji.com</a>
+       <p>www.dji.com</p>
     </footer>
 </body>
 </html>
