--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header class="page__header">
         <a href="./" class="page__logo"><span>DJI</span></a>
         <div class="page__intro">
-            <h1>Dron DJI MiniPro</h1>
+            <h1>Dron DJI Mini 4 Pro</h1>
             <p>Pořizujte dechberoucí letecké záběry s dosud nejpokročilejším dronem DJI s minikamerou &mdash; Mini 4 Pro. Díky výkonným zobrazovacím funkcím, všesměrovému snímání překážek, funkcí&nbsp;ActiveTrack 360°&nbsp;s novým režimem Trace a podporou přenosu v&nbsp;rozlišení FullHD&nbsp;na vzdálenost&nbsp;až 20 km, dokáže oslovit nejen začátečníky, ale i náročnější uživatele kvadrokoptér.</p>
             <a class="button button--secondary" href="#">prohlédnout funkce</a>
         </div>
@@ -21,21 +21,25 @@
             <h2 class="page__title">Popis a parametry dronu</h2>
             <p>Mini 4 Pro stejně jako jeho předchůdci&nbsp;<strong>váží méně než 249 g</strong>&nbsp;pro pohodlné používání na cestách a <strong>mírnější legislativní nároky</strong> na piloty a provozovatele v různých regionech. </p>
             <p>Kamera Mini 4 Pro se chlubí <b>1/1,3palcovým snímačem CMOS</b> s funkcí Dual Native ISO Fusion, clonou f/1,7 a 2,4μm pixely 4 v 1, takže snadno zachytíte i složitější detaily. Díky&nbsp;<b>HDR videu v 4K/60 fps kvalitě</b>&nbsp;a&nbsp;zpomalenému videu při <b>4K/100 fps</b>&nbsp;můžete zachytit detailní záběry, zatímco se&nbsp;<b>10-bit D-Log M</b>&nbsp;postará o ohromující škálu 1,07 bilionu barev a&nbsp;HLG&nbsp;zase o větší flexibilitu při editaci a sdílení. HLG díky vysokému dynamickému rozsahu zaručuje, <b>že barvy a jas zůstanou přirozené</b> a realistické <b>bez nutnosti úprav</b> nebo konverze formátu. </p>
-            <figure>
+            <figure class="picture-box">
                 <picture>
                     <source srcset="./images/dron-v-letu.avif" type="image/avif">
                     <source srcset="./images/dron-v-letu.webp" type="image/webp">
                     <img class="img-responsive" src="./images/dron-v-letu.jpg" alt="Dron DJI Mini 4 Pro v letu">
                 </picture>
-                <figcaption>
+                <figcaption class="picture-box__caption">
                     Pohled zpředu drona DJI Mini 4 Pro
                 </figcaption>
             </figure>
-            <h3>Kvalitní noční záběry a RAW</h3>
-            <p>Vylepšený algoritmus redukce šumu nočních snímků u modelu Mini 4 Pro vám pomůže pořizovat <b>jasnější a kvalitnější záběry,</b> i <b>za šera nebo v&nbsp;noci.</b> Každý drobný detail navíc můžete zaznamenat díky <b>48MP RAW</b> a nové generaci SmartPhoto, která kombinuje <b>HDR zobrazování,</b> rozpoznávání scén a mnoho dalších funkcí. </p>
-            <h3>Chytré režimy pořizování záběrů</h3>
-            <p>Mini 4 Pro nabízí 3 způsoby, jak můžete snadno pořídit snímky, které potřebujete:&nbsp;<strong>Spotlight,&nbsp;Point of Interest</strong>&nbsp;a novou revoluční funkci&nbsp;<strong>ActiveTrack 360°</strong>&nbsp;s vylepšenými možnostmi sledování objektu. K&nbsp;dispozici jsou vám jako obvykle také <strong>automatické chytré režimy.</strong> </p>
-            <ul>
+            <div class="highlight-box">
+                <h3>Kvalitní noční záběry a RAW</h3>
+                <p>Vylepšený algoritmus redukce šumu nočních snímků u modelu Mini 4 Pro vám pomůže pořizovat <b>jasnější a kvalitnější záběry,</b> i <b>za šera nebo v&nbsp;noci.</b> Každý drobný detail navíc můžete zaznamenat díky <b>48MP RAW</b> a nové generaci SmartPhoto, která kombinuje <b>HDR zobrazování,</b> rozpoznávání scén a mnoho dalších funkcí. </p>                
+            </div>
+            <div>
+                <h3>Chytré režimy pořizování záběrů</h3>
+                <p>Mini 4 Pro nabízí 3 způsoby, jak můžete snadno pořídit snímky, které potřebujete:&nbsp;<strong>Spotlight,&nbsp;Point of Interest</strong>&nbsp;a novou revoluční funkci&nbsp;<strong>ActiveTrack 360°</strong>&nbsp;s vylepšenými možnostmi sledování objektu. K&nbsp;dispozici jsou vám jako obvykle také <strong>automatické chytré režimy.</strong> </p>     
+            </div> 
+            <ul class="list">
                 <li><b>MasterShots</b>&nbsp;nabízí dynamické šablony pro pohyby kamerou přizpůsobené pro portrétní snímky, záběry zblízka, nebo z velké vzdálenosti. </li>
                 <li><b>QuickShots</b>&nbsp;nabízí režimy Dronie, Circle, Helix, Rocket, Boomerang a Asteroid. </li>
                 <li><b>Hyperlapse</b>&nbsp;nabízí režimy&nbsp;Free, Waypoint, Circle&nbsp;a&nbsp;Course Lock&nbsp;s neomezenou dobou snímání a podporuje také vytváření kompozice během natáčení. </li>
@@ -44,31 +48,35 @@
         </section>
         <section class="page__content">
             <h2 class="page__title">Dostupná provedení</h2>
-            <figure>
-                <picture>
-                    <source srcset="./images/dron-DJI-Mini-4-Pro-RC-N2.webp" type="image/webp">
-                    <img class="img-responsive" src="./images/dron-DJI-Mini-4-Pro-RC-N2.jpg" alt="Balíček dronu DJI Mini 4 Pro RC N2">
-                </picture>
-                <figcaption>
-                    <h3>Dron DJI Mini 4 Pro + RC-N2 </h3>
-                    <p>V&nbsp;tomto balíčku získáte dron DJI Mini 4&nbsp;Pro se základním ovladačem DJI&nbsp;RC-NC. </p>
-                    <a class="button button--primary" href="https://dronpro.cz/dron-dji-mini-4-pro">zakoupit nyní</a>
-                </figcaption>
-            </figure>
-            <figure>
-                <picture>
-                    <source srcset="./images/dron-DJI-Mini-4-Pro-Fly-More-Combo-DJI-RC-2.webp" type="image/webp">
-                    <img class="img-responsive" src="./images/dron-DJI-Mini-4-Pro-Fly-More-Combo-DJI-RC-2.jpg" alt="Balíček dronu DJI Mini 4 Pro RC 2">
-                </picture>
-                <figcaption>
-                    <h3>Dron DJI Mini 4 Pro Fly More Combo + DJI RC 2</h3>
-                    <p>Dron DJI Mini 4&nbsp;Pro s&nbsp;ovladačem s&nbsp;vestavěným dispejem DJI RC 2&nbsp;a dalším praktickým příslušenstvím. </p>
-                    <a class="button button--primary" href="https://dronpro.cz/dron-dji-mini-4-pro-fly-more-combo-dji-rc-2-1">zakoupit nyní</a>
-                </figcaption>
-            </figure>
+            <div class="panel">
+                <figure>
+                    <picture>
+                        <source srcset="./images/dron-DJI-Mini-4-Pro-RC-N2.webp" type="image/webp">
+                        <img class="img-responsive" src="./images/dron-DJI-Mini-4-Pro-RC-N2.jpg" alt="Balíček dronu DJI Mini 4 Pro RC N2">
+                    </picture>
+                    <figcaption>
+                        <h3>Dron DJI Mini 4 Pro + RC-N2 </h3>
+                        <p>V&nbsp;tomto balíčku získáte dron DJI Mini 4&nbsp;Pro se základním ovladačem DJI&nbsp;RC-NC. </p>
+                        <a class="button button--primary" href="https://dronpro.cz/dron-dji-mini-4-pro">zakoupit nyní</a>
+                    </figcaption>
+                </figure>
+            </div>
+            <div class="panel">
+                <figure>
+                    <picture>
+                        <source srcset="./images/dron-DJI-Mini-4-Pro-Fly-More-Combo-DJI-RC-2.webp" type="image/webp">
+                        <img class="img-responsive" src="./images/dron-DJI-Mini-4-Pro-Fly-More-Combo-DJI-RC-2.jpg" alt="Balíček dronu DJI Mini 4 Pro RC 2">
+                    </picture>
+                    <figcaption>
+                        <h3>Dron DJI Mini 4 Pro Fly More Combo + DJI RC 2</h3>
+                        <p>Dron DJI Mini 4&nbsp;Pro s&nbsp;ovladačem s&nbsp;vestavěným dispejem DJI RC 2&nbsp;a dalším praktickým příslušenstvím. </p>
+                        <a class="button button--primary" href="https://dronpro.cz/dron-dji-mini-4-pro-fly-more-combo-dji-rc-2-1">zakoupit nyní</a>
+                    </figcaption>
+                </figure>
+            </div>
             <p>Mini to the Max</p>
             <p>Nakupte nyní ve verzi Fly More Combo s 10% slevou za jedinečnou cenu 28 990 Kč.</p>
-            <a class="button" href="https://dronpro.cz/dron-dji-mini-4-pro-fly-more-combo-dji-rc-2-1">zakoupit se slevou</a>
+            <a class="button button--secondary" href="https://dronpro.cz/dron-dji-mini-4-pro-fly-more-combo-dji-rc-2-1">zakoupit se slevou</a>
         </section>
         <section class="page__content">
             <h2 class="page__title">Galerie</h2>
