--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="./images/favicon.ico" />
+    <link rel="icon" href="./images/favicon.ico" >
     <link rel="stylesheet" href="./styles/main.css">
     <title>Dron DJI Mini 4 Pro</title>
 </head>
@@ -17,7 +17,7 @@
         </div>
     </header>
     <main class="page__content">
-        <section class="page__content">
+        <section class="page__section">
             <h2 class="page__title">Popis a parametry dronu</h2>
             <p>Mini 4 Pro stejně jako jeho předchůdci&nbsp;<strong>váží méně než 249 g</strong>&nbsp;pro pohodlné používání na cestách a <strong>mírnější legislativní nároky</strong> na piloty a provozovatele v různých regionech. </p>
             <p>Kamera Mini 4 Pro se chlubí <b>1/1,3palcovým snímačem CMOS</b> s funkcí Dual Native ISO Fusion, clonou f/1,7 a 2,4μm pixely 4 v 1, takže snadno zachytíte i složitější detaily. Díky&nbsp;<b>HDR videu v 4K/60 fps kvalitě</b>&nbsp;a&nbsp;zpomalenému videu při <b>4K/100 fps</b>&nbsp;můžete zachytit detailní záběry, zatímco se&nbsp;<b>10-bit D-Log M</b>&nbsp;postará o ohromující škálu 1,07 bilionu barev a&nbsp;HLG&nbsp;zase o větší flexibilitu při editaci a sdílení. HLG díky vysokému dynamickému rozsahu zaručuje, <b>že barvy a jas zůstanou přirozené</b> a realistické <b>bez nutnosti úprav</b> nebo konverze formátu. </p>
@@ -46,7 +46,7 @@
                 <li><b>Panorama</b>&nbsp;podporuje&nbsp;180°, Wide, Vertical&nbsp;a&nbsp;Sphere&nbsp;panoramatické snímky. </li>
             </ul>
         </section>
-        <section class="page__content">
+        <section class="page__section">
             <h2 class="page__title">Dostupná provedení</h2>
             <div class="panel">
                 <figure>
@@ -78,7 +78,7 @@
             <p>Nakupte nyní ve verzi Fly More Combo s 10% slevou za jedinečnou cenu 28 990 Kč.</p>
             <a class="button button--secondary" href="https://dronpro.cz/dron-dji-mini-4-pro-fly-more-combo-dji-rc-2-1">zakoupit se slevou</a>
         </section>
-        <section class="page__content">
+        <section class="page__section">
             <h2 class="page__title">Galerie</h2>
         </section>
     </main>
