--- a/index.html
+++ b/index.html
@@ -80,10 +80,13 @@
         </section>
         <section class="page__section">
             <h2 class="page__title">Galerie</h2>
+            <div class="gallery">
+                <a class="gallery__item" href="./images/gallery/dron-dji-mini-4-pro-a-ovladac-dji-rc-2.webp"><img class="img-responsive" src="./images/gallery/dron-dji-mini-4-pro-a-ovladac-dji-rc-2.webp" alt="dron dji mini 4 pro a ovladac dji rc2"></a><a class="gallery__item gallery__item--50w" href="./images/gallery/ovladani-dron-dji-mini-4-pro.webp"><img class="img-responsive" src="./images/gallery/ovladani-dron-dji-mini-4-pro.webp" alt="dron dji mini 4 pro fly more combo"></a><a class="gallery__item gallery__item--50w" href="./images/gallery/dron-dji-mini-4-pro-a-zapad-slunce.webp"><img class="img-responsive" src="./images/gallery/dron-dji-mini-4-pro-a-zapad-slunce.webp" alt="dron dji mini 4 pro fly more combo"></a>
+            </div>
         </section>
     </main>
     <footer class="page__footer">
-       <p>www.dji.com</p>
+       <a href="https://www.djishop.cz/" class="footer__a">www.dji.com</a>
     </footer>
 </body>
 </html>
