--- a/index.html
+++ b/index.html
@@ -75,10 +75,12 @@
                 </figure>
             </div>
         </section>
-        <section class="page__sleva">
-            <p><span class="page__sleva--stredni">Mini to the </span><span class="page__sleva--velky">Max</span></p>
-            <p>Nakupte nyní ve verzi Fly More Combo s 10% slevou za jedinečnou cenu 28 990 Kč.</p>
-            <a class="button button--black" href="https://dronpro.cz/dron-dji-mini-4-pro-fly-more-combo-dji-rc-2-1">zakoupit se slevou</a>
+        <section class="page__section">
+            <div class="page__sleva">
+                <p><span class="page__sleva--stredni">Mini to the </span><span class="page__sleva--velky">Max</span></p>
+                <p>Nakupte nyní ve verzi Fly More Combo s 10% slevou za jedinečnou cenu 28 990 Kč.</p>
+                <a class="button button--black" href="https://dronpro.cz/dron-dji-mini-4-pro-fly-more-combo-dji-rc-2-1">zakoupit se slevou</a>
+            </div>
         </section>
         <section class="page__section">
             <h2 class="page__title">Galerie</h2>
